[gd_scene load_steps=7 format=3 uid="uid://d4ee5fxan4i06"]

[ext_resource type="Script" uid="uid://wy8ivtrdu6fk" path="res://gameboard/scenes/tool_plot.gd" id="1_i0gku"]
[ext_resource type="Texture2D" uid="uid://bbwnqbyqmekyq" path="res://tools/art/HandRake.png" id="2_0yqva"]
[ext_resource type="Texture2D" uid="uid://bg3p6kl3j40nm" path="res://gameboard/art/highlight.png" id="2_jbbna"]
[ext_resource type="Texture2D" uid="uid://c0bvbpbwk0nx8" path="res://tools/art/shadow.png" id="3_dam0o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nsnlj"]
size = Vector2(58, 58)

[sub_resource type="LabelSettings" id="LabelSettings_i0gku"]
font_size = 12
outline_size = 4
outline_color = Color(0, 0, 0, 1)
shadow_size = 4
shadow_color = Color(0, 0, 0, 0.266667)

[node name="ToolPlot" type="Area2D"]
script = ExtResource("1_i0gku")

[node name="ToolIcon" type="Sprite2D" parent="."]
z_index = 5
z_as_relative = false
position = Vector2(0, -5)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_0yqva")

[node name="Shadow" type="Sprite2D" parent="ToolIcon"]
self_modulate = Color(1, 1, 1, 0.313726)
z_index = 1
z_as_relative = false
position = Vector2(0, 13.3333)
scale = Vector2(0.78125, 0.729167)
texture = ExtResource("3_dam0o")

[node name="Highlight" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_jbbna")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_nsnlj")

[node name="ToolLabel" type="Label" parent="."]
texture_filter = 1
offset_left = -29.0
offset_top = 14.0
offset_right = 29.0
offset_bottom = 31.0
text = "Tool"
label_settings = SubResource("LabelSettings_i0gku")
horizontal_alignment = 1
vertical_alignment = 2

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
